# HyperFT

Prj-Android/: local.properties
Prj-Android/app/src/main/cpp/: CMakeLists.txt  LandmarkTracking.h  mtcnn.h  tracking-lib.cpp
Prj-Android/gradle/wrapper/: gradle-wrapper.properties
Prj-Linux/: CMakeLists.txt  LandmarkTracking.h  colotracker.cpp  colotracker.h  main.cpp
